switching to standard fonts

--- a/app/assets/stylesheets/config/_fonts.scss
+++ b/app/assets/stylesheets/config/_fonts.scss
@@ -1,9 +1,9 @@
 // Import Google fonts
-@import url("https://fonts.googleapis.com/css?family=Lato:400,700|Work+Sans:300");
+// @import url("https://fonts.googleapis.com/css?family=Lato:400,700|Work+Sans:300");
 
 // Define fonts for body and headers
-$body-font: "Lato","Arial", "sans-serif";
-$headers-font: "Work Sans", "Helvetica", "sans-serif";
+$body-font: "Arial", "sans-serif";
+$headers-font: "Helvetica", "sans-serif";
 
 // Set all fonts to 16px;
 body {
