--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -7,31 +7,38 @@
 
   .section-search {
     width: 100%;
-    margin-top: -20rem;
     padding: 0 5px;
     .search {
       text-align: center;
-      margin-bottom: 1rem;
+      margin-bottom: 5rem;
       input {
-        border: 1px solid $color-black;
+        border: none;
+        border-bottom: 1px solid $color-black;
+        text-transform: uppercase;
+        text-align: center;
+        width: 25rem;
+        &:focus, &:active, &:visited {
+          outline: none;
+        }
       }
     }
 
     .recipe__box {
       &--scroll-wrapper {
-        height: 26rem;
+        height: 25rem;
         display: flex;
         flex-wrap: nowrap;
         overflow-x: auto;
         // transition: margin-left 0.3s ease;
-        &::-webkit-scrollbar {
-          // display: none;
-        }
       }
       &--no-result {
-        text-align: center;
-        line-height: 30px;
-        margin: 115px 0 125px 0;
+        height: 25rem;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        p {
+
+        }
       }
       &__card {
         border: 1px solid $color-black;
@@ -39,20 +46,18 @@
         height: 25rem;
         width: 25rem;
         flex: 0 0 auto;
+        cursor: pointer;
         transition: all .4s ease;
 
         &:not(:last-child) {
-          margin-right: 2rem;
+          margin-right: .5rem;
         }
 
         h2 {
           color: $color-black;
           margin: 0;
           font-family: $headers-font;
-          font-weight: 300;
-          a {
-            text-decoration: none;
-          }
+          font-weight: 400;
         }
       }
     }
@@ -65,31 +70,29 @@
 
   .title{
     position: absolute;
-    bottom: 3rem;
+    top: 3rem;
     right: 3rem;
-    background-color: $color-black;
-    border-radius: 3px;
-    padding: .5rem 0.5rem .5rem 1.5rem;
+    // background-color: $color-black;
+    // border-radius: 3px;
+    // padding: .5rem 0.5rem .5rem 1.5rem;
 
     &--text {
       margin: 0;
       font-size: 6rem;
-      font-weight: 300;
-      text-transform: uppercase;
-      color: $color-white;
-      letter-spacing: 1rem;
+      font-weight: 700;
+      text-transform: capitalize;
+      color: $color-black;
+      // letter-spacing: .3rem;
       font-family: $headers-font;
     }
   }
 
   .text-box {
     position: absolute;
-    bottom: 6rem;
+    top: 6rem;
     right: 3rem;
     font-size: 1.6rem;
     font-weight: 100;
-    color: $color-white;
-    background-color: $color-black;
     padding: 1rem .5rem 1rem 2rem;
     border-radius: 3px;
     h1 {
@@ -100,12 +103,13 @@
 }
 
 .heading-primary {
-  color: $color-white;
+  color: $color-black;
   text-transform: uppercase;
   border-radius: 3px;
   font-size: 3rem;
   font-weight: 300;
   letter-spacing: 1rem;
+  text-align: right;
 
   &--main {
     display: block;
@@ -118,68 +122,28 @@
   }
 }
 
-@media screen and (max-width: 32rem) {
+@media screen and (max-width: 50rem) {
   .landing {
     .title {
-      bottom: 1rem;
-      right: 1rem;
+      top: 2rem;
+      right: 2rem;
     }
 
     .title--text {
-      font-size: 2rem;
+      font-size: 4rem;
     }
-
-    .text-box {
-      bottom: 10rem;
-      right: .5rem;
-    }
-  }
-
-  .heading-primary {
-    font-size: 1.6rem;
-  }
-}
-
-@media screen and (max-width: 50rem) and (min-width: 32.1rem) {
-  .landing {
-    .title {
-      bottom: 1rem;
-      right: 1rem;
-    }
-
-    .title--text {
-      font-size: 3rem;
-    }
-
-    .text-box {
-      bottom: 10rem;
-      right: 1rem;
-    }
-  }
-
-  .heading-primary {
-    font-size: 2rem;
   }
 }
 
 @media screen and (max-width: 100rem) and (min-width: 50.1rem) {
   .landing {
     .title {
-      bottom: 2rem;
+      top: 2rem;
       right: 2rem;
     }
 
     .title--text {
       font-size: 5rem;
     }
-
-    .text-box {
-      bottom: 10rem;
-      right: 2rem;
-    }
-  }
-
-  .heading-primary {
-    font-size: 2.5rem;
   }
 }
