--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,8 +6,7 @@
     <title>Oishi.io | Recettes Japonaises</title>
     <%= Gon::Base.render_data %>
     <%= csrf_meta_tags %>
-    <%= action_cable_meta_tag %>
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+    <!-- <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script> -->
     <%= stylesheet_link_tag 'application', media: 'all' %>
   </head>
   <body>
