--- a/app/views/shared/_menu.html.erb
+++ b/app/views/shared/_menu.html.erb
@@ -1,7 +1,7 @@
 <div class="hamburger-menu">
   <div class="dropdown">
     <a class="dropdown__button" data-toggle="dropdown">Menu</a>
-    <ul class="dropdown-menu dropdown-menu-right menu__dropdown">
+    <ul class="dropdown-menu dropdown-menu-left menu__dropdown">
       <li><%= link_to "Home", root_path, class: "menu__item menu__link" %></li>
       <li><%= link_to "Recettes", recipes_path, class: "menu__item menu__link" %></li>
       <li><%= link_to "Ingrédients", ingredients_path, class: "menu__item menu__link" %></li>
