--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -14,7 +14,7 @@
     </h1>
   </div> -->
 
-  <div class="section-search">
+  <div class="section-search" v-cloak>
     <div class="search">
       <input
         v-on:input="query = $event.target.value"
