--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -36,8 +36,9 @@
         width: 100%;
         margin: 0 .5rem;
         font-size: 24px;
-        &:focus, &:active, &:visited {
+        &:focus {
           outline: none;
+          &::-webkit-input-placeholder { opacity: 0; }
         }
       }
     }
