--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -7,7 +7,7 @@
 
   .section-search {
     width: 100%;
-    padding: 0 5px;
+    padding: 0 .5rem;
 
     .search {
       display: flex;
@@ -35,7 +35,8 @@
         text-align: left;
         width: 100%;
         margin: 0 .5rem;
-        font-size: 24px;
+        font-size: 2.4rem;
+        line-height: 2.4rem;
         &:focus {
           outline: none;
           &::-webkit-input-placeholder { opacity: 0; }
