standard seo html meta

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,9 +1,20 @@
 <!DOCTYPE html>
-<html>
+<html lang="fr">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Oishi.io | Recettes Japonaises</title>
+    <title>Oishi. | Cuisine Japonaise</title>
+    <meta name="description" content="Découvrez les meilleurs recettes de cuisines japonnaises"/>
+    <meta property="og:url" content="http://www.oishi.io"/>
+    <meta property="og:type" content="website"/>
+    <meta property="og:title" content="La cuisine japonaise, simplement."/>
+    <meta property="og:description" content="Découvrez vite nos recettes inédites et faciles!"/>
+    <meta property="og:image:secure_url" content="https://res.cloudinary.com/dgv0y9kj7/image/upload/v1539552948/nqsdhbgsbh1u6joco0cq.jpg"/>
+    <meta property="og:image:type" content="image/jpeg"/>
+    <meta name="twitter:card" content="summary"/>
+    <link rel="canonical" href="http://www.oishi.io"/>
+    
+    <%= favicon_link_tag 'favicon.png' %>
     <%= Gon::Base.render_data %>
     <%= csrf_meta_tags %>
     <%= stylesheet_link_tag 'application', media: 'all' %>
