--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -4,7 +4,7 @@
     <div class="col-xs-12 recipe-title">
       <h2><%= @recipe.name %></h2>
       <% if current_user.present? && current_user.admin? %>
-        <%= link_to edit_recipe_path(@recipe) do %>
+        <%= link_to edit_recipe_path(@recipe.slug) do %>
           <sup><h4>+</h4></sup>
         <% end %>
       <% end %>
