--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -15,7 +15,7 @@
       justify-content: space-between;
       text-align: center;
       margin: auto;
-      margin-bottom: 5rem;
+      margin-bottom: 2rem;
       width: 32rem;
       height: 4.5rem;
       border-bottom: 2px solid $color-black;
@@ -46,9 +46,9 @@
 
     .recipe__box {
       &--scroll-wrapper {
-        height: 26rem;
+        height: 31rem;
         display: flex;
-        align-items: center;
+        align-items: flex-end;
         flex-wrap: nowrap;
         overflow-x: auto;
         // transition: margin-left 0.3s ease;
@@ -63,17 +63,21 @@
         }
       }
       &__card {
-        // border: 1px solid $color-black;
         background-color: $color-white;
-        height: 25rem;
         width: 25rem;
         flex: 0 0 auto;
         cursor: pointer;
         transition: all .4s ease;
-        // box-shadow: 0 0.5px 0 0 #ffffff inset, 0 1px 2px 0 #B3B3B3;
+        display: flex;
+        align-items: flex-end;
 
         &:not(:last-child) {
           margin-right: 1rem;
+        }
+
+        .flex-div {
+          width: 100%;
+          height: fit-content;
         }
 
         h2 {
@@ -83,16 +87,34 @@
           font-size: 2.8rem;
           font-family: $headers-font;
           font-weight: 400;
-          line-height: 3.8rem;
+          line-height: 3.2rem;
         }
         .recipe-image {
           background-size: cover;
           background-position: center;
           width: 100%;
-          height: 60%;
+          height: 18rem;
         }
-        p {
-          margin: .5rem 0;
+        .recipe__card__info {
+          display: flex;
+          justify-content: space-around;
+          align-items: center;
+          margin-top: 5px;
+          p {
+            margin: 0;
+            line-height: 2rem;
+          }
+          #icon-time {
+            height: 2rem;
+            margin-right: 5px;
+          }
+          #icon-chef-hat {
+            height: 2rem;
+            margin-right: 5px;
+          }
+          span {
+            display: flex;
+          }
         }
       }
     }
