--- a/app/views/recipes/edit.html.erb
+++ b/app/views/recipes/edit.html.erb
@@ -31,6 +31,11 @@
         <h5 v-if="!editBasics">{{ recipe.cooking_time }}</h5>
         <input v-else class="form-control" type="text" style="width: 50px;" v-model="recipe.cooking_time">
       </div>
+      <div class="item-center-flex-start">
+        <h5 style="margin-right: 10px;">Difficulté: </h5>
+        <h5 v-if="!editBasics">{{ recipe.difficulty }}</h5>
+        <input v-else class="form-control" type="text" style="width: 50px;" v-model="recipe.difficulty">
+      </div>
     </div>
     <div class="edit-recipe-description">
       <h5 style="margin-right: 10px;">Description: </h5>
