--- a/app/views/recipes/edit.html.erb
+++ b/app/views/recipes/edit.html.erb
@@ -19,22 +19,26 @@
       <div class="item-center-flex-start">
         <h5 style="margin-right: 10px;">Couverts: </h5>
         <h5 v-if="!editBasics">{{ recipe.servings }}</h5>
-        <input v-else class="form-control" type="text" style="width: 50px;" v-model="recipe.servings">
+        <input v-else class="form-control" type="text" style="width: 45px;" v-model="recipe.servings">
       </div>
       <div class="item-center-flex-start">
         <h5 style="margin-right: 10px;">Préparation: </h5>
         <h5 v-if="!editBasics">{{ recipe.preparation_time }}</h5>
-        <input v-else class="form-control" type="text" style="width: 50px;" v-model="recipe.preparation_time">
+        <input v-else class="form-control" type="text" style="width: 45px;" v-model="recipe.preparation_time">
       </div>
       <div class="item-center-flex-start">
         <h5 style="margin-right: 10px;">Cuisson: </h5>
         <h5 v-if="!editBasics">{{ recipe.cooking_time }}</h5>
-        <input v-else class="form-control" type="text" style="width: 50px;" v-model="recipe.cooking_time">
+        <input v-else class="form-control" type="text" style="width: 45px;" v-model="recipe.cooking_time">
       </div>
       <div class="item-center-flex-start">
         <h5 style="margin-right: 10px;">Difficulté: </h5>
         <h5 v-if="!editBasics">{{ recipe.difficulty }}</h5>
-        <input v-else class="form-control" type="text" style="width: 50px;" v-model="recipe.difficulty">
+        <select v-else class="form-control" v-model="recipe.difficulty">
+          <option>Facile</option>
+          <option>Moyen</option>
+          <option>Difficile</option>
+        </select>
       </div>
     </div>
     <div class="edit-recipe-description">
