--- a/app/assets/stylesheets/layouts/_main.scss
+++ b/app/assets/stylesheets/layouts/_main.scss
@@ -15,9 +15,11 @@ html {
 body {
   box-sizing: border-box;
   overflow-y: scroll;
+  min-height: 50rem;
     &::-webkit-scrollbar{
     display: none;/*width:0em is better*/
   }
+
 }
 
 [v-cloak] { display: none; }
