not possible to set autosave with current draggable packaghe

--- a/app/views/recipes/edit.html.erb
+++ b/app/views/recipes/edit.html.erb
@@ -75,7 +75,7 @@
               </div>
             </div>
           </draggable>
-          <button v-if="hasmoved == true" v-on:click="saveOrder" class="btn btn-sm btn-success" style="height: 32px;">Sauver Ordre</button>
+          <button v-if="hasMoved" v-on:click="saveOrder" class="btn btn-sm btn-success" style="height: 32px;">Sauver Ordre</button>
         </div>
         <div>
           <h4 style="margin-top: 20px; margin-bottom: 10px;">Ajout des mesures</h4>
