--- a/app/views/ingredients/index.html.erb
+++ b/app/views/ingredients/index.html.erb
@@ -4,7 +4,7 @@
       <h1>Liste des Ingrédients</h1>
         <%= link_to 'Ajouter un ingrédient', new_ingredient_path %>
         <ul>
-          <li v-for="ingredient in ingredients" style="list-style: none">
+          <li v-for="ingredient in ingredients">
             <a :href=`/ingredients/${ingredient.id}`>{{ ingredient.name }}</a>
             <a :href=`/ingredients/${ingredient.id}/edit`>Edit</a>
             <a v-on:click="destroyIngredient(ingredient.id)">X</a>
