--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -1,15 +1,39 @@
-<div class="container">
-  <h1>INDEX DES RECETTES</h1>
-    <ul>
-      <% @recipe_index.each do |letter, recipes| %>
-        <h1><%= letter.upcase %></h1>
-        <ul>
-          <% recipes.each do |recipe| %>
-            <li style="list-style: none">
-              <%= link_to recipe[:name], recipe_path(recipe[:slug]) %>
-            </li>
+<div id="recipe-index" class="container">
+  <div class="row">
+    <div class="col-xs-12 col-sm-8 col-sm-offset-2 col-md-6 col-md-offset-3">
+      <h1 class="header">INDEX DES RECETTES</h1>
+      <ul class="letters">
+        <% @recipe_index.each_with_index do |(letter, recipes), index| %>
+          <% if index.even? %>
+            <div class="letter letter--left">
+              <div class="letter__box">
+                <h1><%= letter.upcase %></h1>
+              </div>
+              <ul class="recipes__list">
+                <% recipes.each do |recipe| %>
+                <li class="recipe">
+                  <%= link_to recipe[:name], recipe_path(recipe[:slug]) %>
+                </li>
+                <% end %>
+              </ul>
+            </div>
+          <% else %>
+            <div class="letter letter--right">
+              <ul class="recipes__list">
+                <% recipes.each do |recipe| %>
+                <li class="recipe">
+                  <%= link_to recipe[:name], recipe_path(recipe[:slug]) %>
+                </li>
+                <% end %>
+              </ul>
+              <div class="letter__box">
+                <h1><%= letter.upcase %></h1>
+              </div>
+            </div>
           <% end %>
-        </ul>
-      <% end %>
-    </ul>
+
+        <% end %>
+      </ul>
+    </div>
+  </div>
 </div>
