--- a/app/views/tags/index.html.erb
+++ b/app/views/tags/index.html.erb
@@ -4,7 +4,7 @@
       <h1>Liste des Tags</h1>
         <%= link_to 'Ajouter un tag', new_tag_path %>
         <ul>
-          <li v-for="tag in tags" style="list-style: none">
+          <li v-for="tag in tags">
             <a :href=`/tags/${tag.id}`>{{ tag.name }}</a>
             <a :href=`/tags/${tag.id}/edit`>Edit</a>
             <a v-on:click="destroyTag(tag.id)">X</a>
