--- a/app/assets/stylesheets/recipes/_recipe_index.scss
+++ b/app/assets/stylesheets/recipes/_recipe_index.scss
@@ -24,9 +24,7 @@
     }
 
     .letter__box {
-      width: 10rem;
-      -webkit-shape-outside: polygon(0% 0%, 100% 0%, 100% 100%, 0% 100%);
-      shape-outside: polygon(0% 0%, 100% 0%, 100% 100%, 0% 100%);
+      margin: 0 1rem;
       h1 {
         font-size: 10rem;
         text-align: center;
@@ -48,4 +46,12 @@
     }
   }
 
+  .short-line {
+    &:not(:last-child) {
+      width: 2rem;
+      height: 1px;
+      border: 1px solid black;
+      margin: 4rem auto;
+    }
+  }
 }
