--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -17,6 +17,7 @@
                 <% end %>
               </ul>
             </div>
+            <div class="short-line"></div>
           <% else %>
             <div class="letter letter--right">
               <ul class="recipes__list">
@@ -30,8 +31,8 @@
                 <h1><%= letter.upcase %></h1>
               </div>
             </div>
+            <div class="short-line"></div>
           <% end %>
-
         <% end %>
       </ul>
     </div>
