--- a/app/views/shared/_menu.html.erb
+++ b/app/views/shared/_menu.html.erb
@@ -1,5 +1,5 @@
 <div class="hamburger-menu">
-  <div class="dropdown">
+  <div class="dropup">
     <a class="dropdown__button" data-toggle="dropdown">Menu</a>
     <ul class="dropdown-menu dropdown-menu-left menu__dropdown">
       <li><%= link_to "Acceuil", root_path, class: "menu__item menu__link" %></li>
