fix media queries and margin

--- a/app/assets/stylesheets/config/_variables.scss
+++ b/app/assets/stylesheets/config/_variables.scss
@@ -15,3 +15,10 @@ $default-font-size: 1.6rem;
 $grid-width: 114rem;
 $gutter-vertical: 8rem;
 $gutter-horizontal: 6rem;
+
+// SCREEN SIZES
+$screen-xs:  480px;
+$screen-s:   640px;
+$screen-m:   768px;
+$screen-l:   1080px;
+$screen-xl:  1440px;
