--- a/app/assets/stylesheets/recipes/_recipe_index.scss
+++ b/app/assets/stylesheets/recipes/_recipe_index.scss
@@ -1,12 +1,9 @@
 #recipe-index {
   width: 100%;
 
-  h1 {
-    margin: 0;
-  }
-
   .header {
-    margin-top: 1rem;
+    margin-top: 4rem;
+    font-size: 3.8rem;
     text-align: center;
   }
 
@@ -16,15 +13,24 @@
 
   .letter {
     display: flex;
-    &--left { justify-content: flex-start; }
-    &--right { justify-content: flex-end; }
+    &--left {
+      justify-content: flex-start;
+      .letter__box {
+        margin-right: 1rem;
+      }
+    }
+    &--right {
+      justify-content: flex-end;
+      .letter__box {
+        margin-left: 1rem;
+      }
+    }
 
     &:not(:last-child) {
       margin-bottom: 4rem;
     }
 
     .letter__box {
-      margin: 0 1rem;
       h1 {
         font-size: 10rem;
         text-align: center;
@@ -39,7 +45,7 @@
           font-size: 2.4rem;
           color: $color-black;
           &:hover {
-            text-decoration: line-through;
+            text-decoration: underline;
           }
         }
       }
@@ -53,5 +59,14 @@
       border: 1px solid black;
       margin: 4rem auto;
     }
+  }
+
+  @media screen and (max-width: $screen-s) {
+    .header { font-size: 2.8rem; }
+    .letter {
+      .letter__box { h1 { font-size: 8rem; line-height: 6.5rem; } }
+      .recipes__list { .recipe { a { font-size: 2rem; } } }
+    }
+    .short-line { &:not(:last-child) { margin: 2rem auto; } }
   }
 }
