--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -68,7 +68,7 @@
                 <p>{{ recipe.preparation_time }}min</p>
               </span>
               <span>
-                <%= svg 'chef_hat' %>
+                <%= svg 'chef-hat' %>
                 <p>{{ recipe.difficulty }}</p>
               </span>
             </div>
