--- a/app/assets/stylesheets/recipes/_recipe_show.scss
+++ b/app/assets/stylesheets/recipes/_recipe_show.scss
@@ -1,30 +1,45 @@
 #recipe-show{
   .header {
-    margin-top: 4rem;
+    margin-top: 3rem;
     font-size: 3.8rem;
     text-transform: uppercase;
   }
 
   .line {
     border-bottom: 1px solid black;
-    margin: 1.5rem 0;
+    margin: 1.5rem 0 6rem 0;
   }
 
-  .servingsandtime{
-    display: flex;
+  .servingsandtime {
     margin-bottom: 2rem;
-    justify-content: space-between;
-    .icon__container {
+    .recipe__info__container {
       display: flex;
-      align-items: center;
-      svg {
-        height: 2.5rem;
-        margin-right: 5px;
+      justify-content: space-around;
+      margin-bottom: 2.5rem;
+      .icon__container {
+        width: 6rem;
+        text-align: center;
+        svg {
+          height: 3rem;
+        }
       }
+
     }
   }
 
   .recipe-topnotes {
+    text-align: justify;
+    text-justify: inter-word;
+    .recipe-description {
+      margin-top: 4rem;
+      .recipe-description-svg {
+        width: fit-content;
+        margin: 0 auto;
+        svg {
+          height: 3rem;
+        }
+      }
+    }
   }
 
 
@@ -36,7 +51,7 @@
   }
 
   .recipe-mesures{
-    margin: 5rem 0;
+    margin-top: 5rem;
     ul {
       padding-left: 0px;
       li {
@@ -54,20 +69,31 @@
   }
 
   .recipe-etapes {
+    margin-top: 5rem;
     margin-bottom: 40px;
 
     .step__container {
       margin-bottom: 2rem;
+      display: flex;
       h5 {
+        text-align: center;
         line-height: 6.5rem;
         font-size: 8rem;
         font-weight: 700;
       }
       &--left {
-        h5 { float: left; margin-right: 1.5rem; }
+        justify-content: flex-start;
+        h5 { margin-right: 1rem; flex: 0 0 10%; }
+        p {
+          flex: 0 0 76%;
+        }
       }
       &--right {
-        h5 { float: right; text-align: right; margin-left: 1.5rem; }
+        justify-content: flex-end;
+        h5 { text-align: right; margin-left: 1rem; flex: 0 0 10%; }
+        p {
+          flex: 0 0 76%;
+        }
       }
       p {
         margin-bottom: 2rem;
