--- a/app/assets/stylesheets/recipes/_recipe_show.scss
+++ b/app/assets/stylesheets/recipes/_recipe_show.scss
@@ -118,9 +118,11 @@
     }
 
     .servingsandtime {
+      margin-bottom: 0;
       .recipe__info__container {
         justify-content: space-between;
         .icon__container {
+          margin-bottom: 0;
           flex: 1 0 20%;
           svg {
             height: 2rem;
